Created frontend and backend to save expenses, update, sort by different categroy, view latest added expense, totla expenses: UI is in next.js with simple tailwind design

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-DATABASE_URL=postgresql://postgres:[YOUR_PASSWORD]@db.tpgtsmznetsoonxwnssh.supabase.co:5432/postgres
-
-API_KEY= 
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:5432/DBNAME
+BASE_CURRENCY=CAD
+EXCHANGE_API_BASE=https://api.exchangerate.host
+API_KEY=your_api_key_here
